<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="info.androidhive.recyclerviewsearch.HistoryActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/searchMonth"
        android:title="@string/searchMonth" />
    <item
        android:id="@+id/searchWeek"
        android:title="@string/searchWeek" />
    <item
        android:id="@+id/searchDay"
        android:title="@string/searchDay" />
    <item
        android:id="@+id/reload"
        android:title="@string/searchAll" />
</menu>