<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.timerlearning.activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="25dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="99dp"
                        android:layout_height="107dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="16dp"
                        app:srcCompat="@drawable/logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/quickstart_message" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp">

                <Button
                    android:id="@+id/btnDashboard"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/img_round"
                    android:drawableTop="@drawable/chart"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="@string/detail"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btnHistory"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/img_round"
                    android:drawableTop="@drawable/history"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="@string/history"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btnSetting"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/img_round"
                    android:drawableTop="@drawable/setting"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="@string/setting"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp">

                <Button
                    android:id="@+id/btnWeb"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/img_round"
                    android:drawableTop="@drawable/web"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="@string/web_pis"
                    android:textSize="10sp" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/img_round"
                    android:drawableTop="@drawable/history"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="@string/history"
                    android:visibility="invisible"
                    android:textSize="10sp" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/img_round"
                    android:drawableTop="@drawable/setting"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="@string/setting"
                    android:visibility="invisible"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
